Add linking-rules model